--- a/gdzc/src/main/res/layout/activity_zcdj_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_edit.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/layout_appbar"
+            android:background="@color/white"
             app:ptrMode="disabled">
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="match_parent"
@@ -24,9 +25,51 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_zcbg"
-                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
+
+                <LinearLayout
+                    android:id="@+id/layout_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    android:padding="@dimen/margin_horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/llayout_zc"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dimen_10"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+                        <ImageView android:id="@+id/iv_zc"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="100dp"
+                                   android:background="@drawable/rect_radius_white"
+                                   android:src="@mipmap/place_holder"/>
+                        <TextView style="@style/CommonText"
+                                  android:layout_gravity="center_horizontal"
+                                  android:layout_marginTop="@dimen/dimen_10"
+                                  android:text="资产照片"/>
+                    </LinearLayout>
+
+                    <LinearLayout android:id="@+id/llayout_fp"
+                                  android:layout_width="0dp"
+                                  android:layout_height="wrap_content"
+                                  android:layout_weight="1"
+                                  android:orientation="vertical">
+                        <ImageView android:id="@+id/iv_fp"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="100dp"
+                                   android:background="@drawable/rect_radius_white"
+                                   android:src="@mipmap/place_holder"/>
+                        <TextView style="@style/CommonText"
+                                  android:layout_gravity="center_horizontal"
+                                  android:layout_marginTop="@dimen/dimen_10"
+                                  android:text="发票照片"/>
+                    </LinearLayout>
+                </LinearLayout>
 
                 <TextView android:id="@+id/tv_cch"
                           style="@style/CommonText"
