--- a/gdzc/src/main/res/layout/fragment_zccx_other.xml
+++ b/gdzc/src/main/res/layout/fragment_zccx_other.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="viewModel" type="com.gdzc.zccx.viewmodel.ZccxViewModel"/>
+        <variable name="viewModel" type="com.gdzc.zccx.viewmodel.ZccxOtherViewModel"/>
     </data>
 
     <RelativeLayout android:layout_width="wrap_content"
