--- a/gdzc/src/main/res/layout/activity_zctj.xml
+++ b/gdzc/src/main/res/layout/activity_zctj.xml
@@ -69,7 +69,7 @@
                       app:clickCommand="@{viewModel.chartCommand}">
 
             <TextView style="@style/CommonText"
-                      android:text="展示类型："/>
+                      android:text="统计分类："/>
 
             <TextView style="@style/CommonText"
                       android:layout_weight="1"
@@ -92,16 +92,16 @@
 
         <View style="@style/line_cell_light_h"/>
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/chart_pie"
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chart_bar_sl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
         <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/chart_bar"
+            android:id="@+id/chart_bar_je"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
