--- a/gdzc/src/main/res/layout/activity_zcdj_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_edit.xml
@@ -42,11 +42,21 @@
                         android:layout_marginRight="@dimen/dimen_10"
                         android:layout_weight="1"
                         android:orientation="vertical">
-                        <ImageView android:id="@+id/iv_zc"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="100dp"
-                                   android:background="@drawable/rect_radius_white"
-                                   android:src="@mipmap/place_holder"/>
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv_zc"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="100dp"
+                                       android:background="@drawable/rect_radius_white"
+                                       android:src="@mipmap/place_holder"/>
+                            <ImageView android:id="@+id/iv_zc_delete"
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:layout_gravity="right"
+                                       android:src="@mipmap/delete"
+                                       android:visibility="gone"/>
+                        </FrameLayout>
                         <TextView style="@style/CommonText"
                                   android:layout_gravity="center_horizontal"
                                   android:layout_marginTop="@dimen/dimen_10"
@@ -58,11 +68,21 @@
                                   android:layout_height="wrap_content"
                                   android:layout_weight="1"
                                   android:orientation="vertical">
-                        <ImageView android:id="@+id/iv_fp"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="100dp"
-                                   android:background="@drawable/rect_radius_white"
-                                   android:src="@mipmap/place_holder"/>
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv_fp"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="100dp"
+                                       android:background="@drawable/rect_radius_white"
+                                       android:src="@mipmap/place_holder"/>
+                            <ImageView android:id="@+id/iv_fp_delete"
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:layout_gravity="right"
+                                       android:src="@mipmap/delete"
+                                       android:visibility="gone"/>
+                        </FrameLayout>
                         <TextView style="@style/CommonText"
                                   android:layout_gravity="center_horizontal"
                                   android:layout_marginTop="@dimen/dimen_10"
